adding a custom cursor

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <!-- CURSOR -->
+    <div class="cursor-dot" data-cursor-dot></div>
+    <div class="cursor-outline" data-cursor-outline></div>
+
     <!-- HEADER -->
     <header class="header" data-header>
       <div class="container">
